# SpectralRiftEngine

./: CMakeLists.txt  README.md  SpectralRift.vcxproj  SpectralRift.vcxproj.filters  main.cpp
cmake/: glad2Config.cmake  glmConfig.cmake  imguiConfig.cmake
cmake/engine/: GraphicalBackends.cmake
cmake/engine/backends/: OpenGL.cmake
inc/: api.hpp  engine.hpp
inc/factories/: app_window_factory.hpp
inc/graphics/: i_graphics_context.hpp  i_render_backend.hpp
inc/graphics/backends/: gl_render_backend.hpp
inc/platform/: platform.hpp
inc/platform/win32/: macros.hpp  platform.hpp  win32_platform.hpp
inc/platform/win32/graphics/: win32_graphics_context.hpp
inc/platform/win32/windows/: win32_app_window.hpp
inc/utils/: color.hpp  vector2.hpp  vector3.hpp
inc/utils/macros/: debug.hpp
inc/windows/: base_app_window.hpp
modules/BackendOpenGL/: CMakeLists.txt  README.md
modules/BackendOpenGL/private/: main.cpp
modules/EngineCore/: CMakeLists.txt  README.md
modules/EngineCore/private/: engine.cpp
modules/EngineCore/private/modules/: module_manager.cpp
modules/EngineCore/private/platform/: platform.cpp
modules/EngineCore/public/: api.hpp  cox.hpp  engine.hpp
modules/EngineCore/public/graphics/: i_render_backend.hpp
modules/EngineCore/public/modules/: engine_module_info.hpp  i_engine_module.hpp  module_manager.hpp
modules/EngineCore/public/utils/: c_singleton.hpp
modules/PlatformNX/private/: switch_platform.cpp
modules/PlatformNX/private/input/: switch_controller.cpp  switch_joystick_input.cpp  switch_touchscreen_input.cpp
modules/PlatformNX/private/windows/: switch_app_window.cpp
modules/PlatformNX/public/: switch_platform.hpp
modules/PlatformNX/public/input/: switch_controller.hpp  switch_joystick_input.hpp
modules/PlatformNX/public/windows/: switch_app_window.hpp
modules/PlatformWindows/: CMakeLists.txt
modules/PlatformWindows/private/: main.cpp  win32_platform.cpp
modules/PlatformWindows/public/: win32_macros.hpp  win32_platform.hpp
src/: api.hpp  base_application.cpp  base_application.hpp  engine.cpp  engine.hpp  input_manager.cpp  input_manager.hpp  main.cpp
src/assets/: generic_asset_manager.cpp  generic_asset_manager.hpp  i_asset_manager.hpp
src/components/: imgui_component.cpp  imgui_component.hpp  mesh_component.cpp  mesh_component.hpp
src/core/: base_component.hpp  entity.hpp  entity_manager.hpp  i_renderable.hpp
src/factories/: app_window_factory.cpp  app_window_factory.hpp
src/graphics/: debug.hpp  gfx_debug.cpp  gfx_debug.hpp
src/graphics/backends/: gl_render_backend.cpp  gl_render_backend.hpp
src/graphics/contexts/: egl_graphics_context.cpp  egl_graphics_context.hpp  win32_graphics_context.cpp  win32_graphics_context.hpp
src/graphics/imgui/: imgui_engine.cpp  imgui_impl_engine.cpp  imgui_impl_engine.hpp  imgui_impl_engine_gl3.cpp  imgui_impl_engine_window.cpp  imgui_impl_engine_window.hpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/graphics/interfaces/: i_graphics_context.hpp  i_render_backend.hpp
src/graphics/rendering/: frame_render_context.hpp  shader.hpp  shader_program.cpp  shader_program.hpp  vertex.hpp  vertex_buffer.hpp
src/input/: base_controller_input.cpp  base_controller_input.hpp  i_controller_input.hpp  input_manager.hpp  keyboard_axis_map.cpp
src/input/switch/: switch_controller.cpp  switch_joystick_input.cpp  switch_joystick_input.hpp  switch_touchscreen_input.cpp  switch_touchscreen_input.hpp
src/io/: i_stream.hpp  string_stream.cpp
src/jni/: jni_manager.hpp
src/loaders/model/: yoyo_gm_model_loader.cpp
src/loaders/texture/: stb_texture_loader.cpp  stb_texture_loader.hpp
src/platform/: macros.hpp  platform.cpp  platform.hpp
src/platform/linux/: linux_platform.cpp  linux_platform.hpp
src/platform/switch/: switch_platform.cpp  switch_platform.hpp
src/platform/win32/: win32_platform.cpp
src/platform/win32/graphics/: win32_graphics_context.cpp
src/platform/win32/windows/: win32_app_window.cpp
src/platform/windows/: win32_app_window.cpp
src/rendering/: camera.hpp  camera_3d.cpp  camera_3d.hpp  renderer_3d.cpp  renderer_3d.hpp
src/utils/: color.hpp  event.hpp  vector2.hpp  vector3.hpp  version.hpp
src/utils/enums/: graphics.hpp
src/utils/macros/: debug.hpp
src/windows/: android_jni_app_window.cpp  android_jni_app_window.hpp  base_app_window.hpp  switch_app_window.cpp  switch_app_window.hpp  win32_app_window.cpp  win32_app_window.hpp  x11_app_window.cpp  x11_app_window.hpp
src_/: base_application.cpp  base_application.hpp
src_/assets/: generic_asset_manager.hpp  i_asset_manager.hpp
src_/components/: imgui_component.cpp  imgui_component.hpp  mesh_component.cpp
src_/core/: base_component.hpp  entity.hpp  entity_manager.hpp  i_renderable.hpp  scene.hpp
src_/factories/: app_window_factory.cpp
src_/graphics/backends/: gl_render_backend.hpp
src_/graphics/contexts/: egl_graphics_context.cpp  egl_graphics_context.hpp  win32_graphics_context.hpp
src_/graphics/imgui/: imgui_engine.hpp  imgui_impl_engine.cpp  imgui_impl_engine_gl3.cpp  imgui_impl_engine_gl3.hpp  imgui_impl_engine_window.cpp  imgui_impl_engine_window.hpp  imgui_impl_opengl3.cpp
src_/graphics/rendering/: indexed_vertex_buffer.hpp  shader.cpp  texture.cpp  texture.hpp
src_/input/: i_controller_input.hpp  input_axis_map.hpp  input_manager.cpp  keyboard_axis_map.hpp
src_/io/: android_asset_stream.hpp  c_file_stream.hpp  file_stream.hpp  i_stream.hpp  string_stream.hpp
src_/jni/: jni_manager.hpp
src_/loaders/model/: yoyo_gm_model_loader.hpp
src_/rendering/: camera_3d.cpp  camera_3d.hpp  renderer_3d.cpp  renderer_3d.hpp
src_/utils/: singleton.hpp  vector3.hpp
src_/utils/enums/: input.hpp
src_/utils/macros/: debug.hpp
src_/windows/: android_jni_app_window.cpp  base_app_window.hpp  win32_app_window.cpp  win32_app_window.hpp  x11_app_window.cpp
